Add gc-demo/gc-case-1.log